# material-components-pyside

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
md3qmlcpp/material-components-qml-main/src/App/: Main.qml
md3qmlcpp/material-components-qml-main/src/App/pages/: IconPage.qml  NavigationPage.qml
md3qmlcpp/material-components-qml-main/src/App/widgets/: DesktopWidgetWindow.qml
md3qmlcpp/material-components-qml-main/src/Core/Controls/: ColorPicker.qml  LinearProgress.qml
md3qmlcpp/material-components-qml-main/src/Core/Styles/: Theme.qml
md3qmlcpp/material-components-qml-main/src/Core/Styles/animations/: AnimatedWindow.qml
md3qmlcpp/material-components-qml-main/src/md3/App/: qmldir
md3qmlcpp/material-components-qml-main/src/md3/Core/: qmldir
md3qmlpy/: __main__.py  app.py
src/material_components_pyside/: __init__.py
tests/: run_test.py  run_test.qml
