[project]
name = "material-components-pyside"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sudoevolve", email = "sudoevolve@gmail.com" },
    { name = "rainzee", email = "rainzee.w@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "materialyoucolor>=3.0.2",
    "pyside6>=6.10.2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "I", # isort
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
